<resources>
    <string name="app_name">MuviQu</string>
    <string name="sample_jason_bourne">Jason Bourne</string>
    <string name="sample_2016">(2016)</string>
    <string name="sample_action_crime">Action, Crime</string>
    <string name="sample_120m">120m</string>
    <string name="sample_7_8">7,8</string>
    <string name="sample_10">/10</string>
    <string name="detail_overview">Overview:</string>
    <string name="sample_overview">The most dangerous former operative of the CIA is drawn out of hiding to uncover hidden truths about his past.</string>
    <string name="detail_director">Director:</string>
    <string name="sample_paul_greengrass">Paul Greengrass</string>
    <string name="detail_cast">Cast:</string>
    <string name="sample_cast">Math Damon</string>
    <string name="image_movie">image_movie</string>


    <!--Data Array-->
    <string-array name="movie_title">
        <item>Jason Bourne</item>
        <item>Aquaman</item>
        <item>A Star Is Born</item>
        <item>Avengers Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>How to Train Your Dragon The Hidden World</item>
        <item>Glass</item>
        <item>Mortal Engines</item>
        <item>Robin Hood</item>
        <item>The Girl in the Spider Web</item>
    </string-array>


    <string-array name="movie_genre">
        <item>Action, Thriller</item>
        <item>Action, Adventure</item>
        <item>Drama, Romance, Mosic</item>
        <item>Action, Adventure</item>
        <item>Thriller, Drama</item>
        <item>Drama</item>
        <item>Action, Adventure</item>
        <item>Drama</item>
        <item>Animation, Family, Adventure</item>
        <item>Thriller, Drama</item>
        <item>Fantasy, Adventure</item>
        <item>Action, Adventure, Thriller</item>
        <item>Action, Crime, Thriller</item>
    </string-array>


    <string-array name="movie_year">
        <item>"2016"</item>
        <item>"2018"</item>
        <item>"2018"</item>
        <item>"2018"</item>
        <item>"2018"</item>
        <item>"2018"</item>
        <item>"2018"</item>
        <item>"2018"</item>
        <item>"2018"</item>
        <item>"2018"</item>
        <item>"2019"</item>
        <item>"2019"</item>
        <item>"2018"</item>
    </string-array>


    <string-array name="movie_rating">
        <item>"6.1"</item>
        <item>"6.8"</item>
        <item>"7.5"</item>
        <item>"8.3"</item>
        <item>"7"</item>
        <item>"8.1"</item>
        <item>"6.5"</item>
        <item>"6.7"</item>
        <item>"7.6"</item>
        <item>"6.5"</item>
        <item>"6"</item>
        <item>"5.8"</item>
        <item>"6"</item>
    </string-array>


    <string-array name="movie_runtime">
        <item>"123 min"</item>
        <item>"144 min"</item>
        <item>"135 min"</item>
        <item>"149 min"</item>
        <item>"124 min"</item>
        <item>"135 min"</item>
        <item>"114 min"</item>
        <item>"130 min"</item>
        <item>"104 min"</item>
        <item>"129 min"</item>
        <item>"129 min"</item>
        <item>"116 min"</item>
        <item>"117 min"</item>
    </string-array>


    <string-array name="movie_director">
        <item>Paul Greengrass</item>
        <item>James Wan</item>
        <item>Bradley Cooper</item>
        <item>Joe Russo</item>
        <item>Susanne Bier</item>
        <item>Anthony McCarten</item>
        <item>Christina Hodson</item>
        <item>Steven Caple Jr.</item>
        <item>Dean DeBlois</item>
        <item>M. Night Shyamalan</item>
        <item>Christian Rivers</item>
        <item>Ben Chandler</item>
        <item>Fede Alvarez</item>
    </string-array>


    <string-array name="movie_cast">
        <item>Matt Damon</item>
        <item>Jason Momoa</item>
        <item>Lady Gaga</item>
        <item>Robert Downey Jr., Chris Hemsworth, Chris Evans, Mark Ruffalo, Scarlett Johansson</item>
        <item>Sandra Bullock</item>
        <item>Rami Malek</item>
        <item>Hailee Steinfeld</item>
        <item>Michael B. Jordan</item>
        <item>Jay Baruchel</item>
        <item>James McAvoy</item>
        <item>Hera Hilmar</item>
        <item>Taron Egerton</item>
        <item>Claire Foy</item>
    </string-array>


    <string-array name="movie_overview">
        <item>The most dangerous former operative of the CIA is drawn out of hiding to uncover hidden truths about his past.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock and roll band Queen in 1970. Hit songs become instant classics. When Mercury increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken.  When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
    </string-array>


    <string-array name="movie_poster">
        <item>@drawable/poster_jason_bourne</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_thegirl</item>
    </string-array>
</resources>
